force-app/main/default/objects/nFORCE__Feature_Translation__mdt/nFORCE__Feature_Translation__mdt.object-meta.xml
<CustomObject>
    <description>This hidden object stores feature records. The feature records designate which features are translatable using the nCino record translations tool.</description>
    <label>Feature Translation</label>
    <pluralLabel>Feature Translations</pluralLabel>
</CustomObject>