force-app/main/default/objects/nFORCE__Feature_Translation__mdt/fields/nFORCE__Active__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>