force-app/main/default/objects/nFORCE__Feature_Translation__mdt/fields/nFORCE__Feature__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Feature__c</fullName>
    <description>Lookup to Feature</description>
    <label>Feature</label>
    <referenceTo>nFORCE__Feature__mdt</referenceTo>
    <relationshipLabel>Feature Translations</relationshipLabel>
    <relationshipName>Feature_Translations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>