force-app/main/default/objects/nFORCE__Feature_Translation__mdt/fields/nFORCE__SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__SObject_API_Name__c</fullName>
    <description>SObject API Name</description>
    <label>SObject API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>